src/test/deca/context/valid/valid_sans_objet/boucles.deca
// Description:
//    Programme de test des boucles.
//

{
	int x = 2;
	while (x < 5) {
		print(x);
		x = x + 1;
		};
}